<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <include layout="@layout/top_icon" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginBottom="@dimen/margin_10"
        android:hint="@string/email"
        android:id="@+id/editText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginBottom="@dimen/margin_10"
        android:ems="10"
        android:id="@+id/editText2" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:inputType="textPassword"
        android:ems="10"
        android:drawableLeft="@mipmap/user_white"
        android:hint="@string/password"
        android:id="@+id/editText3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:drawableLeft="@mipmap/lock"
        android:hint="@string/repassword"
        android:ems="10"
        android:id="@+id/editText4" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/register"
        android:textColor="@color/text_default_white"
        android:background="@drawable/button_red"
        android:id="@+id/button" />

    <LinearLayout
        android:layout_margin="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_default_gray"
            android:text="@string/have_account"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_bol_gray"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>
